Add 5-string bass.

--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
         <div class="number-input-row" style="margin-bottom:6px;">
           <label for="instrumentTypeSelect">Instrument:</label>
           <select id="instrumentTypeSelect" class="stretch" aria-label="Select instrument / string count">
-            <option value="guitar6">Guitar (6)</option>
-            <option value="bass4">Bass (4)</option>
-            <option value="ukulele4">Ukulele (4)</option>
+            <option value="guitar6">Guitar (6-string)</option>
+            <option value="bass5">Bass (5-string)</option>
+            <option value="bass4">Bass (4-string)</option>
+            <option value="ukulele4">Ukulele (4-string)</option>
           </select>
         </div>
         <div class="number-input-row">
