Add reset button.

--- a/index.html
+++ b/index.html
@@ -176,9 +176,6 @@
           </select>
         </div>
         <div id="tuningRows" class="tuning-rows" aria-label="Per-string tuning controls"></div>
-        <div class="actions-row" style="margin-top:10px;">
-          <button type="button" id="resetTuningBtn" title="Reset to Standard tuning">Reset</button>
-        </div>
         <div id="tuningSummary" class="muted" aria-live="polite"></div>
       </div>
 
@@ -199,6 +196,7 @@
         <span id="zoomLevelDisplay" aria-live="polite"></span>
         <button id="zoomInBtn" title="Zoom in" aria-label="Zoom in">+</button>
       </div>
+  <button id="resetAppBtn" type="button" title="Reset all settings to defaults" aria-label="Reset application to defaults">Reset</button>
       <button id="themeToggleBtn" type="button" aria-pressed="false" title="Toggle dark / light theme">Dark Theme</button>
     </footer>
 
