--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   text.interval-labels.hidden-interval { opacity:0; pointer-events:none; }
       /* Reserve space to avoid CLS when header text injected (reduced) */
       #fretboardHeader { min-height:1.2em; }
-      #fretboard_container { margin-bottom:16px; }
+  #fretboardContainer { margin-bottom:16px; }
       #controlArea { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:16px; align-items:start; margin-top:12px; }
       .panel { background:var(--panel-bg); border:1px solid var(--panel-border); border-radius:8px; padding:12px 14px 14px; box-shadow:0 1px 2px rgba(0,0,0,0.08); transition: background .25s, border-color .25s; }
       .panel h4 { margin:0 0 8px; font-size:1rem; letter-spacing:.5px; text-transform:uppercase; font-weight:600; color:var(--heading); }
@@ -86,14 +86,14 @@
         var ch = Math.round(z * (BASE_G_HEIGHT + 2*BASE_PADDING));
         var styleEl = document.createElement('style');
         // Reserve exact space; width unaffected by dynamic fret count in current layout logic
-        styleEl.textContent = '#fretboard_container{width:'+cw+'px;height:'+ch+'px;display:block;}';
+  styleEl.textContent = '#fretboardContainer{width:'+cw+'px;height:'+ch+'px;display:block;}';
         document.head.appendChild(styleEl);
       })();
     </script>
 </head>
 <body>
     <h2 id="fretboardHeader"></h2>
-    <div id="fretboard_container"></div>
+  <div id="fretboardContainer"></div>
 
     <div id="controlArea" aria-label="Fretboard controls">
       <div class="panel" aria-labelledby="panel-highlight">
