same font for reset and theme buttons

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       button, input[type=number], select { border:1px solid var(--panel-border); border-radius:4px; padding:4px 6px; background:linear-gradient(var(--button-bg1),var(--button-bg2)); color:var(--text); transition: background .2s, color .2s, border-color .2s; }
       button:hover { background:linear-gradient(var(--button-bg1),var(--button-bg-hover2)); }
       button:focus, input:focus, select:focus { outline:none; box-shadow:var(--focus-ring); }
-      #themeToggleBtn { padding:6px 10px; font-size:.85rem; }
+  #themeToggleBtn, #resetAppBtn { padding:6px 10px; font-size:.85rem; }
       #pageFooter { margin:40px 0 12px; text-align:center; display:flex; justify-content:center; align-items:center; gap:12px; }
       @media (max-width:560px){ #controlArea { grid-template-columns:1fr; } }
     </style>
