UI follows default values after reset button is pushed.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div style="margin-top:10px;"></div>
         <div>
           <label><input type="checkbox" id="noteNamesCheckbox" checked /> Show Notes</label><br />
-          <label><input type="checkbox" id="intervalNamesCheckbox" checked /> Show Intervals</label>
+          <label><input type="checkbox" id="intervalNamesCheckbox" /> Show Intervals</label>
         </div>
       </div>
 
