Add keyboard arrow keys as a slider control alternative.

--- a/index.html
+++ b/index.html
@@ -179,13 +179,14 @@
         <div id="tuningSummary" class="muted" aria-live="polite"></div>
       </div>
 
-      <div class="panel" aria-labelledby="panel-legend">
-        <h4 id="panel-legend">Legend</h4>
+      <div class="panel" aria-labelledby="panel-instructions">
+        <h4 id="panel-instructions">Instructions</h4>
         <p class="muted" style="margin:0 0 6px;">Colors / intervals update with base note and highlight mode.</p>
         <ul class="muted" style="padding-left:16px; margin:0; list-style:disc;">
-          <li>Click fretboard to shift base note.</li>
+          <li>Click fretboard to shift base note (direction depends on click side).</li>
+          <li>Use Left / Right Arrow keys to shift base note & slider.</li>
           <li>Change Frets to resize neck.</li>
-          <li>Zoom resets layout for clarity.</li>
+          <li>Zoom controls adjust layout size.</li>
         </ul>
       </div>
     </div>
