--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   text.interval-labels.hidden-interval { opacity:0; pointer-events:none; }
       /* Reserve space to avoid CLS when header text injected (reduced) */
       #fretboardHeader { min-height:1.2em; }
-  #fretboardContainer { margin-bottom:16px; }
+  #fretboardContainer { margin-bottom:16px; margin-top:-18px; }
       #controlArea { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:16px; align-items:start; margin-top:12px; }
       .panel { background:var(--panel-bg); border:1px solid var(--panel-border); border-radius:8px; padding:12px 14px 14px; box-shadow:0 1px 2px rgba(0,0,0,0.08); transition: background .25s, border-color .25s; }
       .panel h4 { margin:0 0 8px; font-size:1rem; letter-spacing:.5px; text-transform:uppercase; font-weight:600; color:var(--heading); }
